Revert "[EDP-DDM-20101] - Added csv validation endpoints"
This reverts commit 3bff03da32147b1892c21d6351ffe35680d9a2b6.

Reason for revert: Should be delivered after EDP-DDM-16630

Change-Id: If62f407a569117e2dc3368f5a9826e48be73f85d